k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cinegest-back
  namespace: cinegest
spec:
  selector:
    app: cinegest-back
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
